--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -60,7 +60,8 @@ jobs:
     - name: 编译内核
       run: |
         cd kernel_workspace
-        LTO=thin ./kernel_platform/oplus/build/oplus_build_kernel.sh kalama gki
+        export LTO=thin
+        ./kernel_platform/oplus/build/oplus_build_kernel.sh kalama gki
         
     - name: 上传 Image
       uses: actions/upload-artifact@v4
