--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -46,6 +46,14 @@ on:
         options:
           - ksu
           - mksu
+      VFS_PATCH_ENABLED:
+        description: "添加 vfs 补丁"
+        required: true 
+        type: choice
+        options:
+          - enable
+          - disable
+        default: enable
       KERNEL_NAME:
         description: "自定义内核后版本名"
         required: false 
@@ -116,6 +124,7 @@ jobs:
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
+        
         # 应用补丁
         cd ./KernelSU
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
@@ -131,6 +140,7 @@ jobs:
         cd kernel_platform
         cp ../kernel_patches/mksu/mksu_susfs.patch ./KernelSU/
         cp ../Action-KernelSU-Next/mksu_patch/kernel/* ./KernelSU/
+        
         # 应用补丁
         cd ./KernelSU
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
@@ -141,6 +151,48 @@ jobs:
         cd ../../common
         cp ../../kernel_patches/69_hide_stuff.patch ./
         patch -p1 -F 3 < 69_hide_stuff.patch
+        
+    - name: VFS 补丁
+      if: ${{ github.event.inputs.VFS_patch_ENABLED == 'enable' }}
+      run: |
+        cd kernel_workspace/kernel_platform/common
+        cp ../../SukiSU_patch/hooks/new_hooks.patch ./
+        patch -p1 -F 3 < new_hooks.patch
+        
+    - name: 添加 SUSFS 配置设置
+      run: |
+        cd kernel_workspace/kernel_platform
+        # 添加 KSU 配置设置
+        echo "CONFIG_KSU=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KPM=y" >> ./common/arch/arm64/configs/gki_defconfig
+        
+        # 添加 VFS 配置设置
+        if [[ "${{ github.event.inputs.VFS_patch_ENABLED }}" == 'enable' ]]; then
+          echo "CONFIG_KSU_SUSFS_SUS_SU=n" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "CONFIG_KSU_MANUAL_HOOK=y" >> ./common/arch/arm64/configs/gki_defconfig
+        else
+          echo "CONFIG_KSU_SUSFS_SUS_SU=y" >> ./common/arch/arm64/configs/gki_defconfig
+        fi
+        
+        # 添加 SUSFS 配置设置
+        echo "CONFIG_KSU_SUSFS=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KSU_SUSFS_HAS_MAGIC_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KSU_SUSFS_SUS_PATH=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KSU_SUSFS_SUS_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_KSU_DEFAULT_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_BIND_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KSU_SUSFS_SUS_KSTAT=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KSU_SUSFS_SUS_OVERLAYFS=n" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KSU_SUSFS_TRY_UMOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KSU_SUSFS_AUTO_ADD_TRY_UMOUNT_FOR_BIND_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KSU_SUSFS_SPOOF_UNAME=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KSU_SUSFS_ENABLE_LOG=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KSU_SUSFS_HIDE_KSU_SUSFS_SYMBOLS=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KSU_SUSFS_SPOOF_CMDLINE_OR_BOOTCONFIG=y" >> ./common/arch/arm64/configs/gki_defconfig
+        echo "CONFIG_KSU_SUSFS_OPEN_REDIRECT=y" >> ./common/arch/arm64/configs/gki_defconfig
+        
+        # 移除 check_defconfig
+        sed -i 's/check_defconfig//' ./common/build.config.gki
         
     - name: 编译内核
       run: |
