--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -120,10 +120,15 @@ jobs:
         cd kernel_workspace
         git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }} --depth 1
         cd kernel_platform
-        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
-        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
+
+    - name: ksu 补丁
+      if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.PATCH_VERSION == 'ksu'
+      run: |
+        cd kernel_workspace/kernel_platform
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
+        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         
         # 应用补丁
         cd ./KernelSU
@@ -138,6 +143,8 @@ jobs:
         git clone https://github.com/WildPlusKernel/kernel_patches.git --depth 1
         git clone https://github.com/yuhangle/Action-KernelSU-Next -b dev --depth 1
         cd kernel_platform
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
+        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         cp ../kernel_patches/mksu/mksu_susfs.patch ./KernelSU/
         cp ../Action-KernelSU-Next/mksu_patch/kernel/* ./KernelSU/
         
@@ -149,6 +156,7 @@ jobs:
         patch < ../core_hook.c.patch || true
         patch < ../sucompat.c.patch || true
         cd ../../common
+        patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
         cp ../../kernel_patches/69_hide_stuff.patch ./
         patch -p1 -F 3 < 69_hide_stuff.patch
         
