--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -161,7 +161,7 @@ jobs:
         patch -p1 -F 3 < 69_hide_stuff.patch
         
     - name: VFS 补丁
-      if: ${{ github.event.inputs.VFS_patch_ENABLED == 'enable' }}
+      if: ${{ github.event.inputs.VFS_PATCH_ENABLED == 'enable' }}
       run: |
         cd kernel_workspace/kernel_platform/common
         cp ../../SukiSU_patch/hooks/new_hooks.patch ./
