--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -34,26 +34,20 @@ on:
         options:
           - ksu
           - mksu
+          - sukisu
       SUSFS_ENABLED:
         description: "设置 SUSFS"
         required: true 
         type: boolean
         default: true 
-      PATCH_VERSION:
-        description: "补丁版本"
+      PATCH_CONFIG:
+        description: "补丁配置"
         required: true 
         type: choice
         options:
           - ksu
           - mksu
-      VFS_PATCH_ENABLED:
-        description: "添加 vfs 补丁"
-        required: true 
-        type: choice
-        options:
-          - enable
-          - disable
-        default: enable
+          - sukisu
       KERNEL_NAME:
         description: "自定义内核后版本名"
         required: false 
@@ -125,7 +119,7 @@ jobs:
         cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
 
     - name: ksu 补丁
-      if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.PATCH_VERSION == 'ksu'
+      if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.PATCH_CONFIG == 'ksu'
       run: |
         cd kernel_workspace/kernel_platform
         cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
@@ -138,7 +132,7 @@ jobs:
         patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
         
     - name: Mksu 补丁
-      if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.PATCH_VERSION == 'mksu'
+      if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.PATCH_CONFIG == 'mksu'
       run: |
         cd kernel_workspace
         git clone https://github.com/WildPlusKernel/kernel_patches.git --depth 1
@@ -161,7 +155,7 @@ jobs:
         patch -p1 -F 3 < 69_hide_stuff.patch
         
     - name: VFS 补丁
-      if: ${{ github.event.inputs.VFS_PATCH_ENABLED == 'enable' }}
+      if: github.event.inputs.SUSFS_ENABLED == 'true' && ${{ github.event.inputs.PATCH_CONFIG  == 'mksu' || github.event.inputs.PATCH_CONFIG  == 'sukisu' }}
       run: |
         cd kernel_workspace/kernel_platform/common
         cp ../../SukiSU_patch/hooks/new_hooks.patch ./
