--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -159,9 +159,12 @@ jobs:
         cd ./KernelSU
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
         patch -p1 --forward < mksu_susfs.patch || true
-        patch -p1 --forward < fix.patch || true
-        patch -p1 --forward < vfs_fix.patch || true
-        cd ../common
+        
+        # 还原对devpts hook的删除
+        cd kernel
+        git revert -m 1 $(git log --grep="remove devpts hook" --pretty=format:"%h") -n
+        
+        cd ../../common
         patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
         cp ../../kernelsu_patch/69_hide_stuff.patch ./
         patch -p1 -F 3 < 69_hide_stuff.patch
