--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -108,10 +108,11 @@ jobs:
         cd kernel_workspace/kernel_platform
         curl -LSs "https://raw.githubusercontent.com/5ec1cff/KernelSU/refs/heads/main/kernel/setup.sh" | bash -
         cd KernelSU
-        # git revert -m 1 $(git log --grep="remove devpts hook" --pretty=format:"%H") -n
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
         echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
         sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
+        cd kernel
+        git revert -m 1 $(git log --grep="remove devpts hook" --pretty=format:"%H") -n
 
     - name: 设置 RKSU
       if: github.event.inputs.KSU_ENABLED == 'true' && github.event.inputs.KSU_VERSION == 'rksu'
@@ -177,7 +178,7 @@ jobs:
         cd kernel
         # patch -p1 --forward < core_hook.c.patch || true
         # patch -p1 --forward < sucompat.c.patch || true
-        git revert -m 1 $(git log --grep="remove devpts hook" --pretty=format:"%h") -n
+        # git revert -m 1 $(git log --grep="remove devpts hook" --pretty=format:"%h") -n
         
         cd ../../common
         patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
