更新 KernelSU.yml

--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -202,7 +202,7 @@ jobs:
         
         # 将手动修补的文件替换掉修补失败的文件
         cd ..
-        # rsync -avz ../kernelsu_patch/rksu/kernel/ ./KernelSU/kernel
+        rsync -avz ../kernelsu_patch/rksu/kernel/ ./KernelSU/kernel
         
         cd ./common
         patch -p1 -f < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
