--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -91,7 +91,7 @@ jobs:
         if [ -n "${{ github.event.inputs.KERNEL_NAME }}" ]; then
           sed -i '$s|echo "\$res"|echo "-${{ github.event.inputs.KERNEL_NAME }}"|' ./common/scripts/setlocalversion
         fi
-
+        
     - name: 设置 KernelSU
       if: github.event.inputs.KSU_ENABLED == 'true' && github.event.inputs.KSU_VERSION == 'ksu'
       run: |
@@ -108,12 +108,11 @@ jobs:
         cd kernel_workspace/kernel_platform
         curl -LSs "https://raw.githubusercontent.com/5ec1cff/KernelSU/refs/heads/main/kernel/setup.sh" | bash -
         cd KernelSU
+        git revert -m 1 $(git log --grep="remove devpts hook" --pretty=format:"%H") -n
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
         echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
         sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
-        cd kernel
-        git revert -m 1 $(git log --grep="remove devpts hook" --pretty=format:"%H") -n
-
+        
     - name: 设置 RKSU
       if: github.event.inputs.KSU_ENABLED == 'true' && github.event.inputs.KSU_VERSION == 'rksu'
       run: |
@@ -166,19 +165,17 @@ jobs:
         cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         cp ../kernelsu_patch/mksu/mksu_susfs.patch ./KernelSU/
-        # cp ../kernelsu_patch/mksu/kernel/core_hook.c.patch ./KernelSU/kernel
-        # cp ../kernelsu_patch/mksu/kernel/sucompat.c.patch ./KernelSU/kernel
+        cp ../kernelsu_patch/mksu/kernel/core_hook.c.patch ./KernelSU/kernel
+        cp ../kernelsu_patch/mksu/kernel/sucompat.c.patch ./KernelSU/kernel
         
         # 应用补丁
         cd ./KernelSU
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
         patch -p1 --forward < mksu_susfs.patch || true
         
-        # 还原对devpts hook的删除
         cd kernel
-        # patch -p1 --forward < core_hook.c.patch || true
-        # patch -p1 --forward < sucompat.c.patch || true
-        # git revert -m 1 $(git log --grep="remove devpts hook" --pretty=format:"%h") -n
+        patch -p1 --forward < core_hook.c.patch || true
+        patch -p1 --forward < sucompat.c.patch || true
         
         cd ../../common
         patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
@@ -270,7 +267,7 @@ jobs:
     - name: 应用 Linux 补丁并替换内核镜像
       if: github.event.inputs.KSU_ENABLED == 'true' && github.event.inputs.KSU_VERSION == 'sukisu'
       run: |
-        rm -f kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/dist
+        rm -rf kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/dist
         mv kernel_workspace/SukiSU_patch/kpm/patch_linux kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/gki_kernel/dist/
         cd kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/gki_kernel/dist/
         chmod +x patch_linux
